--- a/CourseShop/CourseShop.Web/Pages/Admin/Roles/Delete.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/Roles/Delete.cshtml
@@ -1,14 +1,15 @@
 ﻿@page
-@model CourseShop.Web.Pages.Admin.Roles.IndexModel
+@model CourseShop.Web.Pages.Admin.Roles.DeleteModel
 @{
-    ViewData["Title"] = "لیست  نقش ها";
+    ViewData["Title"] = "Delete";
 }
+
 
 <section class="content-header">
     <h3>
         <ul class="breadcrumb">
             <li><a href="/admin"><i class="fa fa-dashboard"></i> پنل مدیریت </a></li>
-            <li class="active">لیست  نقش ها</li>
+            <li class="active">لیست  نقش های حذف شده</li>
         </ul>
     </h3>
 </section>
@@ -17,13 +18,6 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="box">
-                <div class="box-header">
-                    <div>
-                        <a href="roles/create" class="btn btn-success">
-                            ایجاد نقش جدید
-                        </a>
-                    </div>
-                </div>
                 <div class="box-body table-responsive">
                     <table id="table" class="hover row-border order-column">
                         <thead>
@@ -38,11 +32,9 @@
                                 <tr>
                                     <td>@item.RoleTitle</td>
                                     <td>
-                                        <a href="/Admin/roles/edit/@item.RoleId" class=" ">
-                                            <i class="fa fa-edit fa-lg" style="padding:10px;color:#FF975B"></i>
-                                        </a>
-                                        <a id="delete" style="cursor:pointer" data-toggle="modal" onclick="test(this)" data-id="@item.RoleId" data-username="@item.RoleTitle" data-target="#modal-default">
-                                            <i class="fa fa-trash fa-lg" style="padding:10px;color:#fe8080"></i>
+
+                                        <a id="delete" data-toggle="modal" onclick="RestoreRole(this)" data-id="@item.RoleId" data-roleTitle="@item.RoleTitle" data-target="#modal-default">
+                                            <i class="fa fa-reply fa-lg" style="padding:10px;color:#fe8080"></i>
                                         </a>
                                     </td>
                                 </tr>
@@ -63,13 +55,13 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
-                <h4 class="modal-title">حذف کاربر</h4>
+                <h4 class="modal-title">بازیابی نقش</h4>
             </div>
             <div id="body" class="modal-body">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default pull-left" data-dismiss="modal">خروج</button>
-                <button type="button" class="btn btn-danger delete">حذف</button>
+                <button type="button" class="btn btn-primary restore">بازیابی</button>
             </div>
         </div>
     </div>
@@ -84,21 +76,19 @@
     })
 </script>
 
-
-
-
 <script>
     var id;
-    var test = function (e) {
-        $("#body").html('آیا از حذف کاربر ' + e.dataset.username + ' مطمئن هستید؟');
+    var RestoreRole = function (e) {
+        $("#body").html('آیا از بازیابی ' + e.dataset.roletitle + ' مطمئن هستید؟');
         id = e.dataset.id;
-        console.log(e);
     }
-    $(".delete").click(function ($this) {
+    $("button.restore").click(function () {
+        console.log(id)
         $.ajax({
             type: "GET",
-            //url: "/Admin/users/delete?id=" + id,
-            url: "/Admin/roles/Delete?handler=Delete&id=" + id
+            url: "/Admin/roles/Delete?handler=Restore&id=" + id,
+            success: function () {
+            }
         })
         $("button.close").trigger('click')
     })
