--- a/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
@@ -80,15 +80,15 @@
                 </div>
                 <!-- search form -->
                 @*<form action="#" method="get" class="sidebar-form">
-                    <div class="input-group">
-                        <input type="text" name="q" class="form-control" placeholder="جستجو">
-                        <span class="input-group-btn">
-                            <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
-                    </div>
-                </form>*@
+                        <div class="input-group">
+                            <input type="text" name="q" class="form-control" placeholder="جستجو">
+                            <span class="input-group-btn">
+                                <button type="submit" name="search" id="search-btn" class="btn btn-flat">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </span>
+                        </div>
+                    </form>*@
                 <!-- /.search form -->
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu" data-widget="tree">
@@ -103,10 +103,10 @@
                         <ul class="treeview-menu">
                             <li><a href="/Admin/users"> لیست کاربران سیستم</a></li>
                             <li>
-                                <a href="/Admin/users/Delete">لیست کاربران حذف شده</a>
+                                <a href="/admin/users/deletedusersList">لیست کاربران حذف شده</a>
                             </li>
                         </ul>
-                    </li>      
+                    </li>
                     <li class="treeview">
                         <a href="#">
                             <i class="fa fa-lock"></i>
@@ -117,7 +117,7 @@
                         </a>
                         <ul class="treeview-menu">
                             <li><a href="/Admin/roles"> لیست نقش های سیستم</a></li>
-                            <li><a href="/Admin/roles/delete"> لیست نقش های حذف شده</a></li>
+                            <li><a href="/Admin/roles/deletedRolesList"> لیست نقش های حذف شده</a></li>
                             <li>
                             </li>
                         </ul>
