--- a/CourseShop/CourseShop.Web/Pages/Admin/Roles/DeletedRolesList.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/Roles/DeletedRolesList.cshtml
@@ -1,14 +1,16 @@
 ﻿@page
-@model CourseShop.Web.Pages.Admin.Roles.IndexModel
+@model CourseShop.Web.Pages.Admin.Roles.DeletedRolesListModel
+
 @{
-    ViewData["Title"] = "لیست  نقش ها";
+    ViewData["Title"] = "بازیابی نقش حذف شده";
 }
+
 
 <section class="content-header">
     <h3>
         <ul class="breadcrumb">
             <li><a href="/admin"><i class="fa fa-dashboard"></i> پنل مدیریت </a></li>
-            <li class="active">لیست  نقش ها</li>
+            <li class="active">لیست  نقش های حذف شده</li>
         </ul>
     </h3>
 </section>
@@ -17,13 +19,6 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="box">
-                <div class="box-header">
-                    <div>
-                        <a href="roles/create" class="btn btn-success">
-                            ایجاد نقش جدید
-                        </a>
-                    </div>
-                </div>
                 <div class="box-body table-responsive">
                     <table id="table" class="hover row-border order-column">
                         <thead>
@@ -38,11 +33,8 @@
                                 <tr id="js-roleId" data-id="@item.RoleId">
                                     <td>@item.RoleTitle</td>
                                     <td>
-                                        <a href="/Admin/roles/edit/@item.RoleId" class=" ">
-                                            <i class="fa fa-edit fa-lg" style="padding:10px;color:#FF975B"></i>
-                                        </a>
-                                        <a style="cursor:pointer" data-toggle="modal" data-id="@item.RoleId" id="js-delete" data-target="#modal-default">
-                                            <i class="fa fa-trash fa-lg" style="padding:10px;color:#fe8080"></i>
+                                        <a style="cursor:pointer" data-toggle="modal" data-id="@item.RoleId" id="js-restore" data-target="#modal-default">
+                                            <i class="fa fa-reply fa-lg" style="padding:10px;color:#fe8080"></i>
                                         </a>
                                     </td>
                                 </tr>
@@ -55,7 +47,6 @@
     </div>
 </section>
 
-
 <div class="modal fade in" id="myModal" style=" padding-right: 17px;">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -63,13 +54,13 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
-                <h4 class="modal-title">خذف کاربر</h4>
+                <h4 class="modal-title">بازیابی کاربر</h4>
             </div>
             <div id="body" class="modal-body">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default pull-left" data-dismiss="modal">خروج</button>
-                <button id="js-btnYes" type="button" class="btn btn-danger">حذف</button>
+                <button id="js-btnYes" type="button" class="btn btn-primary">بازیابی</button>
             </div>
         </div>
     </div>
@@ -78,32 +69,34 @@
 <script src="/AdminLayout/js/jquery.dataTables.js"></script>
 <script>
     $(document).ready(function () {
-
         $("#table").DataTable({
             "dom": '<"top"f>rt<"bottom"lp><"clear">'
         });
-
-        $('a#js-delete').on('click', function (e) {
-            e.preventDefault();
-            $("#body").html('آیا از حذف نقش  مطمئن هستید؟');
-            var id = $(this).closest('tr').data('id');
-            $('#myModal').data('id', id).modal('show');
-        });
-
-        $('#js-btnYes').click(function () {
-            var id = $('#myModal').data('id');
-            $.ajax({
-                type: "GET",
-                url: "/Admin/roles/Delete?id=" + id,
-                success: () => {
-                    $('[data-id=' + id + ']').remove();
-                    $('#myModal').modal('hide');
-                }
-            })
-
-        });
-
-
     })
+
+    $('a#js-restore').on('click', function (e) {
+        debugger;
+        e.preventDefault();
+        $("#body").html('آیا از بازیابی کاربر  مطمئن هستید؟');
+        var id = $(this).closest('tr').data('id');
+        $('#myModal').data('id', id).modal('show');
+
+    });
+
+    $('#js-btnYes').click(function () {
+        var id = $('#myModal').data('id');
+        $.ajax({
+            type: "GET",
+            url: "/Admin/roles/Delete?handler=Restore&id=" + id,
+            success: () => {
+                $('[data-id=' + id + ']').remove();
+                $('#myModal').modal('hide');
+            }
+        })
+
+    });
+
 </script>
+
+
 
