--- a/CourseShop/CourseShop.Web/Pages/Admin/Users/Delete.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/Users/Delete.cshtml
@@ -1,110 +1,8 @@
 ﻿@page
 @model CourseShop.Web.Pages.Admin.Users.DeleteModel
 @{
-    ViewData["Title"] = "لیست کاربران حذف شده";
-
+    ViewData["Title"] = "Delete";
 }
 
-<section class="content-header">
-    <h3>
-        <ul class="breadcrumb h3">
-            <li><a href="/admin"><i class="fa fa-dashboard"></i> پنل مدیریت </a></li>
-            <li class="active">لیست کاربران حذف شده</li>
-        </ul>
-    </h3>
-</section>
 
-<section class="content">
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="box">
-                <div class="box-body table-responsive">
-                    <table id="table" class="hover row-border order-column">
-                        <thead>
-                            <tr>
-                                <th>نام کاربری</th>
-                                <th>ایمیل</th>
-                                <th>تاریخ عضویت</th>
-                                <th>وضعیت</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model.UsersForAdmin)
-                            {
-                                <tr>
-                                    <td>@item.Username</td>
-                                    <td>@item.Email</td>
-                                    <td>@item.RegisterDate.ToShamsi()</td>
-                                    <td>
-                                        @if (@item.IsActive)
-                                        {
-                                            <p style="color:#008D4C">فعال</p>
-                                        }
-                                        else
-                                        {
-                                            <p style="color:#fe8080">غیرفعال</p>
-                                        }
-                                    </td>
-                                    <td>
 
-                                        <a id="delete" data-toggle="modal" onclick="RestoreUser(this)" data-id="@item.UserId" data-username="@item.Username" data-target="#modal-default">
-                                            <i class="fa fa-reply fa-lg" style="padding:10px;color:#fe8080"></i>
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<div class="modal fade in" id="modal-default" style=" padding-right: 17px;">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-                <h4 class="modal-title">حذف کاربر</h4>
-            </div>
-            <div id="body" class="modal-body">
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default pull-left" data-dismiss="modal">خروج</button>
-                <button type="button" class="btn btn-primary restore">بازیابی</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script src="/AdminLayout/js/jquery.dataTables.js"></script>
-<script>
-    $(document).ready(function () {
-        $("#table").DataTable({
-            "dom": '<"top"f>rt<"bottom"lp><"clear">'
-        });
-    })
-</script>
-
-<script>
-    var id;
-    var RestoreUser = function (e) {
-        $("#body").html('آیا از بازیابی ' + e.dataset.username + ' مطمئن هستید؟');
-        id = e.dataset.id;
-    }
-    $(".restore").click(function () {
-        console.log(id)
-        $.ajax({
-            type: "GET",
-            url: "/Admin/users/Delete?handler=Restore&id=" + id,
-            success: function () {
-                console.log("hi");
-            }
-        })
-        $("button.close").trigger('click')
-    })
-</script>
