--- a/CourseShop/CourseShop.Web/Views/Shared/_MainMenu.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Shared/_MainMenu.cshtml
@@ -1,39 +1,35 @@
-﻿<div class="main-menu">
+﻿@using CourseShop.Core.Interfaces
+
+@inject ICourseGroupServices courseShopService;
+
+@{
+    var coursesGroups = courseShopService.GetCourseGroupList();
+}
+
+<div class="main-menu">
     <div class="container">
         <nav>
             <span class="responsive-sign"><i class="zmdi zmdi-menu"></i></span>
             <ul>
-                <li>
-                    <a href=""> برنامه نویسی موبایل </a>
-                    <ul>
-                        <li><a href=""> زامارین  Xamarin </a></li>
-                        <li><a href=""> react Native </a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href=""> برنامه نویسی وب </a>
-                    <ul>
-                        <li><a href=""> Asp.net WebForms </a></li>
-                        <li><a href=""> Asp.net MVC </a></li>
-                        <li><a href=""> PHP MVC </a></li>
-                        <li><a href=""> PHP FrameWorks </a></li>
-                        <li><a href=""> Asp.net Core </a></li>
-                    </ul>
-                </li>
-                <li><a href=""> برنامه نویسی تحت ویندوز </a></li>
-                <li>
-                    <a href=""> طراحی سایت </a>
-                    <ul>
-                        <li><a href=""> طراحی سایت </a></li>
-                        <li><a href=""> Bootstrap </a></li>
-                        <li><a href=""> Angular </a></li>
-                        <li><a href=""> react </a></li>
-                        <li><a href=""> Jquery </a></li>
-                    </ul>
-                </li>
-                <li><a href=""> بانک های اطلاعاتی </a></li>
-                <li><a href=""> سئو </a></li>
-                <li><a href=""> سیستم عامل </a></li>
+                @foreach (var item in coursesGroups.Where(c => c.ParentId == null))
+                {
+                    <li>
+                        <a href="#">@item.CourseGroupTitle</a>
+
+                        @if (coursesGroups.Any(c => c.ParentId == item.ParentId))
+                        {
+                            <ul>
+                                @foreach (var subGroup in coursesGroups.Where(c => c.ParentId == item.CourseGroupId))
+                                {
+                                    <li>
+                                        <a href="#">@subGroup.CourseGroupTitle</a>
+                                    </li>
+                                }
+                            </ul>
+                        }
+
+                    </li>
+                }
             </ul>
         </nav>
     </div>
